# T166_capstone_project

./: README.md  package-lock.json
.github/workflows/: backend.yml  main.yml
backend/: .gitignore  README.md  notes.md  pyproject.toml
backend/src/: constants.py  database.py  main.py
backend/src/models/: group.py  user.py
backend/src/routers/: auth.py  groups.py  users.py
backend/src/schemas/: group.py  user.py
backend/src/services/: auth.py
backend/tests/: test_health.py
frontend/: index.html  package-lock.json  package.json
frontend/src/lib/: api.ts  stores.ts  timeslots.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/group/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/register/: +page.svelte
